Suppression du commentaire dans la page groupe